<?xml version="1.0" encoding="utf-8"?>
<!-- search layout displaying canteen -->
<!-- align components horizontally -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:weightSum="10"
    android:orientation="horizontal">

    <!-- shows previous canteen by sorting order -->
    <ImageView
        android:id="@+id/move_back_icon"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/move_back"
        android:contentDescription="@string/move_back_icon_description" />

    <!-- align components vertically -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="8">

        <!-- canteen name -->
        <TextView
            android:id="@+id/name_value"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="24sp"
            android:gravity="bottom|center_horizontal"
            tools:ignore="NestedWeights" />

        <!-- horizontal line -->
        <View android:background="#ffffff"
            android:layout_width = "match_parent"
            android:layout_height="3dp"/>

        <!-- layout aligning 4 images horizontally -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <!-- food image -->
            <ImageView
                android:id="@+id/canteen_icon_1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/canteen_icon_1"
                android:contentDescription="@string/canteen_icon" />

            <!-- water image -->
            <ImageView
                android:id="@+id/canteen_icon_2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/canteen_icon_2"
                android:contentDescription="@string/canteen_icon" />

            <!-- table image -->
            <ImageView
                android:id="@+id/canteen_icon_3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/canteen_icon_3"
                android:contentDescription="@string/canteen_icon"/>

            <!-- fork and knife image -->
            <ImageView
                android:id="@+id/canteen_icon_4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/canteen_icon_4"
                android:contentDescription="@string/canteen_icon"/>
        </LinearLayout>

        <!-- row for distance-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            >

            <TextView
                android:id="@+id/distance_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/distance"
                android:textSize="20sp"
                android:gravity="bottom"

                />

            <TextView
                android:id="@+id/distance_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:gravity="bottom|right"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <!-- line -->
        <View android:background="#ffffff"
            android:layout_width = "match_parent"
            android:layout_height="1dp"/>

        <!-- row for rating -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            >

            <TextView
                android:id="@+id/rating_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/rating"
                android:textSize="20sp"
                android:gravity="bottom"

                />

            <TextView
                android:id="@+id/rating_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:gravity="bottom|right"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>


        <!-- line -->
        <View android:background="#ffffff"
            android:layout_width = "match_parent"
            android:layout_height="1dp"/>

        <!-- row for capacity -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            >

            <TextView
                android:id="@+id/capacity_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/capacity"
                android:textSize="20sp"
                android:gravity="bottom"

                />

            <TextView
                android:id="@+id/capacity_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:gravity="bottom|right"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <!-- line -->
        <View android:background="#ffffff"
            android:layout_width = "match_parent"
            android:layout_height="1dp"/>

        <!-- row for opening time (Monday - Thursday) -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            >

            <TextView
                android:id="@+id/opening_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/opening_time"
                android:textSize="20sp"
                android:gravity="bottom"

                />

            <TextView
                android:id="@+id/opening_time_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:gravity="bottom|right"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <!-- line -->
        <View android:background="#ffffff"
            android:layout_width = "match_parent"
            android:layout_height="1dp"/>

        <!-- row for Friday opening time -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            >

            <TextView
                android:id="@+id/friday_opening_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/friday_opening_time"
                android:textSize="20sp"
                android:gravity="bottom"

                />

            <TextView
                android:id="@+id/friday_opening_time_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:gravity="bottom|right"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <!-- line -->
        <View
            android:background="@color/white"
            android:layout_width = "match_parent"
            android:layout_height="1dp"/>

        <!-- rest of layout to hold getCanteenMenuButton and getRouteButton -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <!-- empty row -->
            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.3" />

            <!-- getCanteenMenuButton -->
            <Button
                android:id="@+id/get_canteen_menu_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.2"
                android:backgroundTint="@android:color/holo_blue_light"
                android:text="@string/get_canteen_menu" />

            <!-- getRouteButton -->
            <Button
                android:id="@+id/get_route_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.2"
                android:backgroundTint="@android:color/holo_blue_light"
                android:text="@string/get_route" />

            <!-- empty row -->
            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.3" />

        </LinearLayout>
    </LinearLayout>
    <!-- end of vertical alignment -->

    <!-- shows next canteen by sorting order -->
    <ImageView
        android:id="@+id/move_forward_icon"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:src="@drawable/move_forward"
        android:contentDescription="@string/move_forward_icon_description" />
</LinearLayout>